# pipkinpad

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ai_workbench/: __init__.py  ai.py  app.py  audit.py  auth.py  cli.py  config.py  files.py  security.py  terminal.py
src/ai_workbench/static/: index.html  login.html
tests/: test_core.py
