[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pipkinpad"
version = "0.1.3"
description = "PipkinPad: a local, AI-assisted file manager and terminal workspace."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Workbench contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "cryptography>=42.0",
  "fastapi>=0.115",
  "httpx>=0.27",
  "keyring>=25.0",
  "python-multipart>=0.0.9",
  "pywinpty>=2.0; sys_platform == 'win32'",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "build>=1.2"]

[project.scripts]
pipkinpad = "ai_workbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_workbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

